--- a/src/Nancy.Bootstrappers.Autofac.Tests/Nancy.Bootstrappers.Autofac.Tests.csproj
+++ b/src/Nancy.Bootstrappers.Autofac.Tests/Nancy.Bootstrappers.Autofac.Tests.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{F7487A32-729C-4F50-A15C-68D2B57803EA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Nancy.BootStrappers.Autofac.Tests</RootNamespace>
+    <RootNamespace>Nancy.Bootstrappers.Autofac.Tests</RootNamespace>
     <AssemblyName>Nancy.BootStrappers.Autofac.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Autofac">
-      <HintPath>..\Nancy.Bootstrappers.Autofac\Binaries\Autofac.dll</HintPath>
+      <HintPath>..\..\dependencies\Autofac\Autofac.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -42,13 +42,15 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="xunit">
-      <HintPath>..\..\dependencies\xunit\xunit.dll</HintPath>
+      <HintPath>..\..\dependencies\Nancy\dependencies\xunit\xunit.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AutofacNancyBootStrapperFixture.cs" />
+    <Compile Include="..\..\dependencies\Nancy\src\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
+    <Compile Include="AutofacNancyBootstrapperFixture.cs" />
     <Compile Include="FakeAutofacNancyBootstrapper.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\dependencies\Nancy\src\Nancy.Tests\Nancy.Tests.csproj">
