Updated nuspec file to have a dependency on the autofac nuget

--- a/src/Nancy.Bootstrappers.Autofac/nancy.bootstrappers.autofac.nuspec
+++ b/src/Nancy.Bootstrappers.Autofac/nancy.bootstrappers.autofac.nuspec
@@ -12,6 +12,7 @@
     <projectUrl>http://nancyfx.org</projectUrl>
 	<dependencies>
       <dependency id="Nancy" version="[0.6.0]" />
+	  <dependency id="Autofac" />
     </dependencies> 
     <tags>Nancy Autofac</tags>
   </metadata>
