Updated xunit reference

--- a/src/Nancy.Bootstrappers.Autofac.Tests/Nancy.Bootstrappers.Autofac.Tests.csproj
+++ b/src/Nancy.Bootstrappers.Autofac.Tests/Nancy.Bootstrappers.Autofac.Tests.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="xunit">
-      <HintPath>..\..\dependencies\Nancy\dependencies\xunit\xunit.dll</HintPath>
+      <HintPath>..\packages\xunit.1.9.0.1566\lib\xunit.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
