--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\Nancy.Bootstrappers.Autofac\packages.config" />
+  <repository path="..\..\dependencies\Nancy\src\Nancy.Testing\packages.config" />
+  <repository path="..\..\dependencies\Nancy\src\Nancy.Tests\packages.config" />
   <repository path="..\Nancy.BootStrappers.Autofac.Tests\packages.config" />
+  <repository path="..\Nancy.Bootstrappers.Autofac\packages.config" />
 </repositories>
