--- a/src/Nancy.Bootstrappers.Autofac/nancy.bootstrappers.autofac.nuspec
+++ b/src/Nancy.Bootstrappers.Autofac/nancy.bootstrappers.autofac.nuspec
@@ -8,13 +8,13 @@
     <description>An Autofac bootstrapper for the Nancy web framework.</description>
     <summary>Nancy is a lightweight web framework for the .Net platform, inspired by Sinatra. Nancy aim at delivering a low ceremony approach to building light, fast web applications.</summary>
     <language>en-US</language>
-	  <copyright>Andreas Håkansson, Steven Robbins and contributors</copyright>
-	  <iconUrl>http://nancyfx.org/nancy-nuget.png</iconUrl>
-	  <licenseUrl>https://github.com/thecodejunkie/Nancy/blob/master/license.txt</licenseUrl>
+    <copyright>Andreas Håkansson, Steven Robbins and contributors</copyright>
+    <iconUrl>http://nancyfx.org/nancy-nuget.png</iconUrl>
+    <licenseUrl>https://github.com/thecodejunkie/Nancy/blob/master/license.txt</licenseUrl>
     <projectUrl>http://nancyfx.org</projectUrl>
-	<dependencies>
+    <dependencies>
       <dependency id="Nancy" />
-	  <dependency id="Autofac" />
+      <dependency id="Autofac" version="3.3.1" />
     </dependencies> 
     <tags>Nancy Autofac</tags>
   </metadata>
