Added Update extension method
Moved over all container updating to the new extension

--- a/src/Nancy.Bootstrappers.Autofac/Nancy.Bootstrappers.Autofac.csproj
+++ b/src/Nancy.Bootstrappers.Autofac/Nancy.Bootstrappers.Autofac.csproj
@@ -47,6 +47,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="AutofacNancyBootstrapper.cs" />
+    <Compile Include="ComponentContextExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\dependencies\Nancy\src\Nancy\Nancy.csproj">
