--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ install:
 - git submodule update --init --recursive
 
 build_script:
-- ps: .\dependencies\Nancy\build.ps1 -verbosity=diagnostic
+- ps: .\build.ps1 -verbosity=diagnostic
 
 artifacts:
 - path: build\nuget\*.nupkg
